--- a/SOP.html
+++ b/SOP.html
@@ -28,10 +28,10 @@
         <br>
         <br>
         ผมสนใจการทำงานกับคอมพิวเตอร์และการเขียนโปรแกรม โดยเริ่มสนใจจริงจังในช่วง ม.4 และเริ่มศึกษาการพัฒนาเว็บไซต์จนได้โอกาสแข่งขันงานศิลปะหัตถกรรมโรงเรียน 
-        ครั้งที่ 70 ซึ่งผมได้รับรางวัลรองชนะเลิศอันดับ 2 และต่อมาในครั้งที่ 71 ผมได้รับเหรียญเงินที่ 7 จากการแข่งขันนั้น ทำให้ผมมีแรงบันดาลใจที่จะพัฒนาทักษะด้านนี้ต่อผมตั้งใจสมัครเรียนที่สถาบันเทคโนโลยีพระจอมเกล้าพระนครเหนือ คณะวิทยาศาสตร์ประยุกต์ เพราะได้รับคำแนะนำจากครอบครัว ครู และรุ่นพี่ว่าเป็นสถาบันที่มีหลักสูตรเหมาะสมกับเป้าหมายของผม ผมเชื่อมั่นว่าความมุ่งมั่นและความสามารถที่มีจะช่วยให้ผมสร้างประโยชน์ให้กับสถาบัน และพัฒนาทักษะเพื่ออนาคต
+        ครั้งที่ 70 ซึ่งผมได้รับรางวัลรองชนะเลิศอันดับ 2 และต่อมาในครั้งที่ 71 ผมได้รับเหรียญเงินที่ 7 จากการแข่งขันนั้น ทำให้ผมมีแรงบันดาลใจที่จะพัฒนาทักษะด้านนี้ต่อผมตั้งใจสมัครเรียนที่สถาบันแห่งนี้ครับ เพราะได้รับคำแนะนำจากครอบครัว ครู และรุ่นพี่ว่าเป็นสถาบันที่มีหลักสูตรเหมาะสมกับเป้าหมายของผม ผมเชื่อมั่นว่าความมุ่งมั่นและความสามารถที่มีจะช่วยให้ผมสร้างประโยชน์ให้กับสถาบัน และพัฒนาทักษะเพื่ออนาคต
         <br>
         <br>
-        สุดท้ายนี้ ผมหวังว่าทางสถาบันเทคโนโลยีพระจอมเกล้าพระนครเหนือ คณะวิทยาศาสตร์ประยุกต์ สาขาวิทยาการคอมพิวเตอร์ จะมองเห็นถึงความตั้งใจและเป้าหมายของผม หากได้รับโอกาสเข้าเรียน ผมสัญญาว่าจะมุ่งมั่นและไม่ทำให้ทางสถาบันผิดหวังครับ
+        สุดท้ายนี้ ผมหวังว่าทางสถาบัน จะมองเห็นถึงความตั้งใจและเป้าหมายของผม หากได้รับโอกาสเข้าเรียน ผมสัญญาว่าจะมุ่งมั่นและไม่ทำให้ทางสถาบันผิดหวังครับ
         </h3>
         <br>
         <br>
